<?xml version="1.0"?>

<package>
  
  <name>mongodb_log</name>
  <version>0.0.0</version>
  <description>MongoDB backed system for logging ROS topics</description>
  
  <maintainer email="email@domain.com">Maintainer</maintainer>
  
  <license>GPLv2+</license>
  
  <author email="email@domain.com">Tim Niemueller</author>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>designator_integration</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>designator_integration</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  
</package>
